--- a/net-www/apache/ChangeLog
+++ b/net-www/apache/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-www/apache
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/apache/ChangeLog,v 1.6 2002/04/11 04:27:31 woodchip Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/apache/ChangeLog,v 1.7 2002/04/26 16:09:10 woodchip Exp $
+
+  26 Apr 2002; Donny Davies <woodchip@gentoo.org> apache-1.3.24-r1.ebuild :
+
+  o Made the user/group id's 81 in pkg_setup after thusly adding them to
+    Gentoo's baselayout.  No need to upgrade folks; cosmetic-only fix.
 
   10 Apr 2002; Donny Davies <woodchip@gentoo.org> apache-1.3.24-r1.ebuild,
   files/conf/commonapache.conf :
