--- a/net-www/w3m/ChangeLog
+++ b/net-www/w3m/ChangeLog
@@ -1,13 +1,21 @@
 # ChangeLog for net-www/w3m
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/w3m/ChangeLog,v 1.1 2002/02/01 21:53:36 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/w3m/ChangeLog,v 1.2 2002/04/26 17:59:19 agriffis Exp $
+
+*w3m-0.3 (26 Apr 2002)
+
+	26 Apr 2002; Aron Griffis <agriffis@gentoo.org> w3m-0.3.ebuild :
+
+	Updated to version 0.3 with optional image support (depends on "use
+	imlib").
 
 *w3m-0.2.2 (1 Feb 2002)
 
-  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
-  
-  Added initial ChangeLog which should be updated whenever the package is
-  updated in any way. This changelog is targetted to users. This means that the
-  comments should well explained and written in clean English. The details about
-  writing correct changelogs are explained in the skel.ChangeLog file which you
-  can find in the root directory of the portage repository.
+	1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
+
+	Added initial ChangeLog which should be updated whenever the package is
+	updated in any way. This changelog is targetted to users. This means that
+	the comments should well explained and written in clean English. The
+	details about writing correct changelogs are explained in the
+	skel.ChangeLog file which you can find in the root directory of the
+	portage repository.
