--- a/app-misc/bonnie++/ChangeLog
+++ b/app-misc/bonnie++/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for app-misc/bonnie++
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-misc/bonnie++/ChangeLog,v 1.1 2002/02/01 21:53:08 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/bonnie++/ChangeLog,v 1.2 2002/04/26 21:59:43 sandymac Exp $
+
+*bonnie++-1.02c (26 Apr 2002)
+
+  26 Apr 2002; William McArthur <sandymac@gentoo.org> bonnie++-1.02c.ebuild :
+
+  Just renamed the ebuild for a newer version of the upstream package. Version
+  1.02c fixes "a very serious bug in reporting of seek test results."
 
 *bonnie++-1.02a (1 Feb 2002)
 
