--- a/gnome-extra/gnome-pim/ChangeLog
+++ b/gnome-extra/gnome-pim/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for gnome-extra/gnome-pim
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-pim/ChangeLog,v 1.1 2002/02/01 21:53:29 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-pim/ChangeLog,v 1.2 2002/04/26 22:34:23 spider Exp $
+
+*gnome-pim-1.4.6 (26 Apr 2002)
+  26 Apr 2002; Spider <spider@gentoo.org> gnome-pim-1.4.6.ebuild :
+  update URL
+  new version (beating the dead horse) 
 
 *gnome-pim-1.4.3 (1 Feb 2002)
 
