--- a/app-admin/puregui/ChangeLog
+++ b/app-admin/puregui/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for app-admin/puregui
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-admin/puregui/ChangeLog,v 1.1 2002/02/01 21:52:59 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/puregui/ChangeLog,v 1.2 2002/04/27 03:56:59 seemant Exp $
+
+*puregui-0.3.5 (26 Apr 2002)
+
+  26 Apr 2002; Seemant Kulleen <seemant@gentoo.org> puregui-0.3.5.ebuild
+  files/digest-puregui-0.3.5 :
+
+  Version bump.  The previous ebuild should have been versioned 0.0.1 to be
+  completely accurate, so it has been masked.
 
 *puregui-1-r1 (1 Feb 2002)
 
