--- a/net-libs/libicq2000/ChangeLog
+++ b/net-libs/libicq2000/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-libs/libicq2000
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libicq2000/ChangeLog,v 1.2 2002/04/17 21:26:08 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libicq2000/ChangeLog,v 1.3 2002/04/27 07:13:18 spider Exp $
+
+*libicq2000-0.3.1 (27 Apr 2002)
+  27 Apr 2002; Spider <spider@gentoo.org> libicq2000-0.3.1.ebuild
+  new version, get it while its fresh....   
 
 *libicq2000-0.3.0 (17 Apr 2002)
   17 Apr 2002; Spider <spider@gentoo.org> libicq2000-0.3.0.ebuild
