--- a/net-im/ickle/ChangeLog
+++ b/net-im/ickle/ChangeLog
@@ -1,7 +1,11 @@
 # ChangeLog for net-im/ickle
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-im/ickle/ChangeLog,v 1.3 2002/04/18 00:14:23 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/ickle/ChangeLog,v 1.4 2002/04/27 07:16:49 spider Exp $
 
+
+*ickle-0.3.1 (27 Apr 2002)
+27 Apr 2002; Spider <spider@gentoo.org> ickle-0.3.1.ebuild :
+  update to latest version
 
 *ickle-0.3.0-r1 (18 Apr 2002)
 18 Apr 2002; Spider <spider@gentoo.org> ickle-0.3.0-r1.ebuild :
