--- a/app-misc/xclip/ChangeLog
+++ b/app-misc/xclip/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for app-misc/xclip
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-misc/xclip/ChangeLog,v 1.1 2002/02/01 21:53:09 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/xclip/ChangeLog,v 1.2 2002/04/27 07:41:31 seemant Exp $
+
+*xclip-0.08 (26 Apr 2002)
+
+  26 Apr 2002; Seemant Kulleen <seemant@gentoo.org> xclip-0.08.ebuild
+  files/digest-xclip-0.08 :
+
+  Version bump.
 
 *xclip-0.05 (1 Feb 2002)
 
