--- a/media-sound/alsa-driver/ChangeLog
+++ b/media-sound/alsa-driver/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for media-sound/alsa-driver
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-driver/ChangeLog,v 1.3 2002/02/09 01:44:32 woodchip Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-driver/ChangeLog,v 1.4 2002/04/27 08:04:55 agenkin Exp $
+
+*alsa-driver-0.9.0_rc1 (27 Apr 2002)
+
+  17 Feb 2002; Arcady Genkin <agenkin@thpoon.com>
+	alsa-driver-0.9.0_rc1.ebuild :
+
+  Quick update to version 0.9.0rc1.
+
+*alsa-driver-0.9.0_beta10 (3 Feb 2002)
 
   8 Feb 2002; Donny Davies <woodchip@gentoo.org> ChangeLog,
   alsa-driver-0.5.11.ebuild, alsa-driver-0.5.12a.ebuild,
@@ -8,8 +17,6 @@
 
   Moved the code looking for the kernel sources into pkg_setup().
   Closes bug #273.  No revisions bumped, mostly a cosmetic change.
-
-*alsa-driver-0.9.0_beta10 (3 Feb 2002)
 
   3 Feb 2002; T.Neidt <tod@gentoo.org> ChangeLog :
 
