--- a/app-text/latex2html/ChangeLog
+++ b/app-text/latex2html/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for app-text/latex2html
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-text/latex2html/ChangeLog,v 1.1 2002/02/01 21:53:10 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/latex2html/ChangeLog,v 1.2 2002/04/27 09:22:19 seemant Exp $
+
+*latex2html-2002 (27 Apr 2002)
+
+  27 Apr 2002; Seemant Kulleen <seemant@gentoo.org> latex2html-2002.ebuild
+  files/digest-latex2html-2002 :
+
+  Version bump.
 
 *latex2html-2000.1b (1 Feb 2002)
 
