--- a/net-www/mozilla/ChangeLog
+++ b/net-www/mozilla/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-www/mozilla
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/mozilla/ChangeLog,v 1.10 2002/04/24 22:26:41 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/mozilla/ChangeLog,v 1.11 2002/04/27 12:02:48 pvdabeel Exp $
+
+  27 Apr 2002; pvdabeel <pvdabeel@gentoo.org> :
+
+  ppc(/sparc) fix 0.9.9 and 1.0-rc1
+  older ebuild should be masked out or fixed
 
   24 Apr 2002; M.Schlemmer <azarah@gentoo.org> :
 
