--- a/media-video/ogle/ChangeLog
+++ b/media-video/ogle/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-video/ogle
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-video/ogle/ChangeLog,v 1.3 2002/03/28 02:32:42 blocke Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/ogle/ChangeLog,v 1.4 2002/04/27 17:54:13 bangert Exp $
+
+  27 Apr 2002; Thilo Bangert <bangert at gentoo dot org> ogle-0.8.2-r6.euild :
+  
+  fixed depandency for a52dec-0.7.2 (latest is 0.7.3)
+  
 
 *ogle-0.8.2-r6 (27 Mar 2002)
 
