--- a/media-sound/alsa-driver/ChangeLog
+++ b/media-sound/alsa-driver/ChangeLog
@@ -1,10 +1,21 @@
 # ChangeLog for media-sound/alsa-driver
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-driver/ChangeLog,v 1.4 2002/04/27 08:04:55 agenkin Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-driver/ChangeLog,v 1.5 2002/04/27 19:22:49 agenkin Exp $
 
 *alsa-driver-0.9.0_rc1 (27 Apr 2002)
 
-  17 Feb 2002; Arcady Genkin <agenkin@thpoon.com>
+  27 Apr 2002; Arcady Genkin <agenkin@thpoon.com>
+	alsa-driver-0.9.0_rc1-r2.ebuild :
+
+  Updated the alsasound startup script.
+	
+  27 Apr 2002; Arcady Genkin <agenkin@thpoon.com>
+	alsa-driver-0.9.0_rc1-r1.ebuild :
+
+  Rewrote the istallation procedures to use the package's native
+  installation subsystem.
+	
+  27 Apr 2002; Arcady Genkin <agenkin@thpoon.com>
 	alsa-driver-0.9.0_rc1.ebuild :
 
   Quick update to version 0.9.0rc1.
