--- a/net-www/fnord/ChangeLog
+++ b/net-www/fnord/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for net-www/fnord
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# /space/gentoo/cvsroot/gentoo-x86/skel.ChangeLog,v 1.2 2002/02/05 00:57:47 gbevin Exp
+# $Header: /var/cvsroot/gentoo-x86/net-www/fnord/ChangeLog,v 1.2 2002/04/27 21:36:36 bangert Exp $
 
 *fnord-1.2 (30 Mar 2002)
 
