--- a/app-admin/furball/ChangeLog
+++ b/app-admin/furball/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for app-admin/furball
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# /space/gentoo/cvsroot/gentoo-x86/app-admin/logrotate/ChangeLog,v 1.1 2002/02/01 21:52:59 gbevin Exp
+# $Header: /var/cvsroot/gentoo-x86/app-admin/furball/ChangeLog,v 1.2 2002/04/27 21:46:44 bangert Exp $
 
 *furball-0.5 (11 Apr 2002)
 
