--- a/dev-libs/libggz/ChangeLog
+++ b/dev-libs/libggz/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for dev-libs/libggz
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# /space/gentoo/cvsroot/gentoo-x86/skel.ChangeLog,v 1.2 2002/02/05 00:57:47 gbevin Exp
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libggz/ChangeLog,v 1.2 2002/04/27 21:46:44 bangert Exp $
 
 *libggz-0.0.5 (13 Apr 2002)
 
