--- a/net-mail/ezmlm/ChangeLog
+++ b/net-mail/ezmlm/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for net-mail/ezmlm
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# /space/gentoo/cvsroot/gentoo-x86/skel.ChangeLog,v 1.2 2002/02/05 00:57:47 gbevin Exp
+# $Header: /var/cvsroot/gentoo-x86/net-mail/ezmlm/ChangeLog,v 1.2 2002/04/27 21:46:44 bangert Exp $
 
 *ezmlm-0.53 (25 Mar 2002)
 
