--- a/net-mail/vmailmgr/ChangeLog
+++ b/net-mail/vmailmgr/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for net-mail/vmailmgr
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# /space/gentoo/cvsroot/gentoo-x86/skel.ChangeLog,v 1.2 2002/02/05 00:57:47 gbevin Exp
+# $Header: /var/cvsroot/gentoo-x86/net-mail/vmailmgr/ChangeLog,v 1.2 2002/04/27 21:46:45 bangert Exp $
 
 *vmailmgr-0.96.9-r1 (16 Apr 2002)
 
