--- a/net-misc/slidentd/ChangeLog
+++ b/net-misc/slidentd/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for net-misc/slidentd
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# /space/gentoo/cvsroot/gentoo-x86/skel.ChangeLog,v 1.2 2002/02/05 00:57:47 gbevin Exp
+# $Header: /var/cvsroot/gentoo-x86/net-misc/slidentd/ChangeLog,v 1.2 2002/04/27 21:46:45 bangert Exp $
 
 *slidentd-0.0.15 (05 Apr 2002)
 
