--- a/app-misc/colortail/ChangeLog
+++ b/app-misc/colortail/ChangeLog
@@ -1,6 +1,6 @@
 # ChangeLog for app-misc/colortail
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# /space/gentoo/cvsroot/gentoo-x86/skel.ChangeLog,v 1.2 2002/02/05 00:57:47 gbevin Exp
+# $Header: /var/cvsroot/gentoo-x86/app-misc/colortail/ChangeLog,v 1.2 2002/04/27 23:08:35 bangert Exp $
 
 *colortail-0.3.0 (12 Feb 2002)
 
