--- a/media-sound/xmms-iris/ChangeLog
+++ b/media-sound/xmms-iris/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for media-sound/xmms-iris
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-sound/xmms-iris/ChangeLog,v 1.1 2002/02/01 21:53:31 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/xmms-iris/ChangeLog,v 1.2 2002/04/27 23:47:11 seemant Exp $
+
+*xmms-iris-0.9 (27 Apr 2002)
+
+  27 Apr 2002; Seemant Kulleen <seemant@gentoo.org> xmms-iris-0.9.ebuild
+  files/digest-xmms-iris-0.9 :
+
+  Thanks to foser@sesmar.eu.org (foser) in bug #1508 for this update.
 
 *xmms-iris-0.8 (1 Feb 2002)
 
