--- a/dev-util/usermode/ChangeLog
+++ b/dev-util/usermode/ChangeLog
@@ -1,13 +1,12 @@
 # ChangeLog for dev-util/usermode
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-util/usermode/ChangeLog,v 1.1 2002/02/01 21:53:29 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/usermode/ChangeLog,v 1.2 2002/04/28 00:49:08 blocke Exp $
 
-*usermode-20020104 (1 Feb 2002)
+*usermode-20020415 (27 Apr 2002)
 
-  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
-  
-  Added initial ChangeLog which should be updated whenever the package is
-  updated in any way. This changelog is targetted to users. This means that the
-  comments should well explained and written in clean English. The details about
-  writing correct changelogs are explained in the skel.ChangeLog file which you
-  can find in the root directory of the portage repository.
+  27 Apr 2002; Bruce A. Locke <blocke@shivan.org> usermode-20020415.ebuild:
+
+  Bumped to new version and quick change to ebuild to make it more version
+  independent.
+
+
