--- a/gnome-base/gnome-libs/ChangeLog
+++ b/gnome-base/gnome-libs/ChangeLog
@@ -1,11 +1,12 @@
 # ChangeLog for gnome-base/gnome-libs
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-libs/ChangeLog,v 1.7 2002/04/15 06:55:17 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-libs/ChangeLog,v 1.8 2002/04/28 00:55:36 seemant Exp $
 
-*gnome-libs-1.4.1.5-r1 (14 Apr 2002)
+*gnome-libs-1.4.1.5-r1 (27 Apr 2002)
 
-  14 Apr 2002; Seemant Kulleen <seemant@gentoo.org> gnome-libs-1.4.1.5-r1.ebuild:
-  Force recompilation against newer libpng
+  27 Apr 2002; Seemant Kulleen <seemant@gentoo.org> gnome-libs-1.4.1.5-r1.ebuild:
+  Added docbook-sgml as a compile-time dependency, until we figure out how to
+  disable sgml documentation from being created (as an option or something).
 
 *gnome-libs-1.4.1.5 (05 Apr 2002)
   05 Apr 2002; Spider <spider@gentoo.org> gnome-libs-1.4.1.5.ebuild :
