--- a/dev-perl/Compress-Zlib/ChangeLog
+++ b/dev-perl/Compress-Zlib/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Compress-Zlib
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Compress-Zlib/ChangeLog,v 1.1 2002/02/01 21:53:12 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Compress-Zlib/ChangeLog,v 1.2 2002/04/28 04:05:47 g2boojum Exp $
+
+*Compress-Zlib-1.16 (27 Apr 2002)
+
+  27 Apr 2002; Grant Goodyear <g2boojum@gentoo.org> :
+  
+  New version
 
 *Compress-Zlib-1.10 (1 Feb 2002)
 
