--- a/x11-terms/multi-gnome-terminal/ChangeLog
+++ b/x11-terms/multi-gnome-terminal/ChangeLog
@@ -1,6 +1,8 @@
 # ChangeLog for x11-terms/multi-gnome-terminal
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/x11-terms/multi-gnome-terminal/ChangeLog,v 1.4 2002/02/26 19:57:57 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-terms/multi-gnome-terminal/ChangeLog,v 1.5 2002/04/28 15:00:52 azarah Exp $
+
+*multi-gnome-terminal-1.4.0 (28 Apr 2002)
 
 *multi-gnome-terminal-1.3.13 (26 Feb 2002)
 
