--- a/dev-python/optik/ChangeLog
+++ b/dev-python/optik/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for dev-python/optik
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-python/optik/ChangeLog,v 1.1 2002/02/01 21:53:28 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/optik/ChangeLog,v 1.2 2002/04/28 17:18:22 jnelson Exp $
+
+*optik-1.3 (28 Apr 2002)
+
+  28 Apr 2002; Jon Nelson <jnelson@gentoo.org> ChangeLog option-1.3.ebuild
+  
+  Update to latest upstream
+  Update build procedure
+  Closes #1975
 
 *optik-1.2 (1 Feb 2002)
 
