--- a/net-misc/nt/ChangeLog
+++ b/net-misc/nt/ChangeLog
@@ -1,6 +1,8 @@
 # ChangeLog for net-misc/nt
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/nt/ChangeLog,v 1.1 2002/02/01 21:53:35 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/nt/ChangeLog,v 1.2 2002/04/28 17:58:52 azarah Exp $
+
+*nt-2.0_rc2 (28 Apr 2002)
 
 *nt-1.30 (1 Feb 2002)
 
