--- a/gnome-base/gnome-libs/ChangeLog
+++ b/gnome-base/gnome-libs/ChangeLog
@@ -1,6 +1,8 @@
 # ChangeLog for gnome-base/gnome-libs
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-libs/ChangeLog,v 1.8 2002/04/28 00:55:36 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-libs/ChangeLog,v 1.9 2002/04/28 23:47:56 azarah Exp $
+
+*gnome-libs-1.4.1.6 (29 Apr 2002)
 
 *gnome-libs-1.4.1.5-r1 (27 Apr 2002)
 
