--- a/net-www/netscape-navigator/ChangeLog
+++ b/net-www/netscape-navigator/ChangeLog
@@ -1,7 +1,13 @@
 # ChangeLog for <CATEGORY>/<PACKAGE_NAME>
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-www/netscape-navigator/ChangeLog,v 1.2 2002/04/10 01:36:31 jnelson Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/netscape-navigator/ChangeLog,v 1.3 2002/04/29 03:28:34 jnelson Exp $
 
+*netscape-navigator-4.79-r1 (28 Apr 2002)
+
+  28 Apr 2002; Jon Nelson <jnelson@gentoo.org> netscape-navigator-4.79-r1.ebuild
+
+  Make sure to extract nif files as root
+  
 *netscape-navigator-4.79 (9 Apr 2002)
 
   9 Apr 2002; Jon Nelson <jnelson@gentoo.org> netscape-navigator-4.79.ebuild
