--- a/media-video/nvidia-kernel/ChangeLog
+++ b/media-video/nvidia-kernel/ChangeLog
@@ -1,9 +1,14 @@
 # ChangeLog for media-video/nvidia-kernel
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-video/nvidia-kernel/ChangeLog,v 1.1 2002/04/07 05:43:58 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/nvidia-kernel/ChangeLog,v 1.2 2002/04/29 06:49:02 drobbins Exp $
+
+*nvidia-kernel-1.0.2880-r1 (29 Apr 2002)
+
+  29 Apr 2002; Daniel Robbins <drobbins@gentoo.org>: Changed NV_KV to KV and
+  added a Portage dependency to ensure that KV is available.  Should fix some
+  build problems.
 
 *nvidia-kernel-1.0.2880 (7 Apr 2002)
 
   7 Apr 2002; M.Schlemmer <azarah@gentoo.org> nvidia-kernel-1.0.2880.ebuild
-
   Fixed all the spaces.
