--- a/net-misc/slidentd/ChangeLog
+++ b/net-misc/slidentd/ChangeLog
@@ -1,8 +1,11 @@
 # ChangeLog for net-misc/slidentd
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-misc/slidentd/ChangeLog,v 1.2 2002/04/27 21:46:45 bangert Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/slidentd/ChangeLog,v 1.3 2002/04/29 08:41:56 bangert Exp $
 
-*slidentd-0.0.15 (05 Apr 2002)
+  29 Apr 2002; Thilo Bangert <bangert@gentoo.org> slidentd-0.0.15 :
+
+  adjusted run file so slidentd runs with wheel group permissions (needed for grsecurity)
+  added run-file
 
   25 Apr 2002; Thilo Bangert <thilo.bangert@gmx.net> slidentd-0.0.15 :
 
