--- a/dev-perl/AxKit/ChangeLog
+++ b/dev-perl/AxKit/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for dev-perl/AxKit
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/AxKit/ChangeLog,v 1.1 2002/02/01 21:53:11 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/AxKit/ChangeLog,v 1.2 2002/05/05 14:08:57 seemant Exp $
+
+*AxKit-1.5.2-r1 (5 May 2002)
+
+  5 May 2002; Seemant Kulleen <seemant@gentoo.org> AxKit-1.5.2-r1.ebuild 
+  files/digest-AxKit-1.5.2-r1 :
+
+  Changed to use the perl-module.eclass
 
 *AxKit-1.3 (1 Feb 2002)
 
