--- a/dev-perl/CGI/ChangeLog
+++ b/dev-perl/CGI/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for dev-perl/CGI
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/CGI/ChangeLog,v 1.2 2002/05/04 02:45:39 woodchip Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/CGI/ChangeLog,v 1.3 2002/05/05 14:08:57 seemant Exp $
+
+*CGI-2.78-r2 (5 May 2002)
+
+  5 May 2002; Seemant Kulleen <seemant@gentoo.org> CGI-2.78-r2.ebuild
+  files/digest-CGI-2.78-r2 :
+
+  Changed to using the perl-module.eclass
 
 *CGI-2.78-r1 (3 May 2002)
   
