--- a/dev-perl/Compress-Zlib/ChangeLog
+++ b/dev-perl/Compress-Zlib/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for dev-perl/Compress-Zlib
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Compress-Zlib/ChangeLog,v 1.2 2002/04/28 04:05:47 g2boojum Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Compress-Zlib/ChangeLog,v 1.3 2002/05/05 14:08:57 seemant Exp $
+
+*Compress-Zlib-1.16-r1 (5 May 2002)
+
+  5 May 2002; Seemant Kulleen <seemant@gentoo.org>
+  Compress-Zlib-1.16-r1.ebuild files/digest-Compress-Zlib-1.16-r1 :
+
+  Changed to using eclasses
 
 *Compress-Zlib-1.16 (27 Apr 2002)
 
