--- a/dev-perl/POP3Client/ChangeLog
+++ b/dev-perl/POP3Client/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for dev-perl/POP3Client
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/POP3Client/ChangeLog,v 1.1 2002/02/01 21:53:27 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/POP3Client/ChangeLog,v 1.2 2002/05/05 18:56:34 seemant Exp $
+
+*POP3Client-2.7-r1 (5 May 2002)
+
+  5 May 2002; Seemant Kulleen <seemant@gentoo.org> POP3Client-2.7-r1.ebuild
+  files/digest-POP3Client-2.7-r1 :
+
+  eclassed.
 
 *POP3Client-2.7 (1 Feb 2002)
 
