--- a/dev-perl/Storable/ChangeLog
+++ b/dev-perl/Storable/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for dev-perl/Storable
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Storable/ChangeLog,v 1.1 2002/02/01 21:53:28 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Storable/ChangeLog,v 1.2 2002/05/06 15:51:20 seemant Exp $
+
+*Storable-1.0.14 (6 May 2002)
+
+  6 May 2002; Seemant Kulleen <seemant@gentoo.org> Storable-1.0.14.ebuild
+  files/digest-Storable-1.0.14 :
+
+  Version bump and eclass conversion.
 
 *Storable-1.0.7 (1 Feb 2002)
 
