--- a/dev-perl/libnet/ChangeLog
+++ b/dev-perl/libnet/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/libnet
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/libnet/ChangeLog,v 1.1 2002/02/01 21:53:28 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/libnet/ChangeLog,v 1.2 2002/05/06 22:20:53 seemant Exp $
+
+*libnet-1.11 (6 May 2002)
+
+  6 May 2002; Seemant Kulleen <seemant@gentoo.org> libnet-1.11.ebuild :
+
+  version bump
 
 *libnet-1.0703-r1 (1 Feb 2002)
 
