--- a/app-sci/euler/ChangeLog
+++ b/app-sci/euler/ChangeLog
@@ -1,6 +1,10 @@
-# ChangeLog for app-misc/euler
+# ChangeLog for app-sci/euler
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-misc/euler/ChangeLog,v 1.1 2002/02/01 21:53:08 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-sci/euler/ChangeLog,v 1.1 2002/05/07 00:30:27 george Exp $
+
+*euler-1.59.1 (06 May 2002)
+  
+  Moved into app-sci category
 
 *euler-1.59.1 (1 Feb 2002)
 
