--- a/app-sci/gperiodic/ChangeLog
+++ b/app-sci/gperiodic/ChangeLog
@@ -1,8 +1,12 @@
-# ChangeLog for app-misc/gperiodic
+# ChangeLog for app-sci/gperiodic
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-misc/gperiodic/ChangeLog,v 1.1 2002/02/01 21:53:08 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-sci/gperiodic/ChangeLog,v 1.1 2002/05/07 01:35:08 george Exp $
 
 *gperiodic-1.3.2 (1 Feb 2002)
+
+  06 May 2002; G. Shapovalov <george@gentoo.org> Changelog:
+
+  Moved from app-misc to app-sci
 
   1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
   
