--- a/dev-perl/mod_perl/ChangeLog
+++ b/dev-perl/mod_perl/ChangeLog
@@ -1,6 +1,8 @@
 # ChangeLog for dev-perl/mod_perl
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/mod_perl/ChangeLog,v 1.3 2002/04/09 23:58:28 woodchip Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/mod_perl/ChangeLog,v 1.4 2002/05/07 19:15:25 woodchip Exp $
+
+*mod_perl-1.26 (7 May 2002)
 
 *mod_perl-1.25-r2 (9 Apr 2002)
 
