--- a/media-video/nvidia-kernel/ChangeLog
+++ b/media-video/nvidia-kernel/ChangeLog
@@ -1,8 +1,16 @@
 # ChangeLog for media-video/nvidia-kernel
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-video/nvidia-kernel/ChangeLog,v 1.3 2002/05/03 06:59:50 agenkin Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/nvidia-kernel/ChangeLog,v 1.4 2002/05/08 05:00:56 jnelson Exp $
 
 *nvidia-kernel-1.0.2880-r1 (29 Apr 2002)
+
+  8 May 2002; Jon Nelson <jnelson@gentoo.org>
+  	nvidia-kernel-1.0.2880-r1.ebuild :
+        
+  Make sure to usr KERNDIR=/usr/src/linux
+  /usr/src/linux should be a symlink pointing to the real sources,
+  which may lie outside /usr/src.  KV is set appropriately
+  in any case by more recent versions of portage.
 
   3 May 2002; Arcady Genkin <agenkin@thpoon.com>
 	nvidia-kernel-1.0.2800-r1.ebuild :
