--- a/media-sound/alsa-driver/ChangeLog
+++ b/media-sound/alsa-driver/ChangeLog
@@ -1,8 +1,13 @@
 # ChangeLog for media-sound/alsa-driver
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-driver/ChangeLog,v 1.8 2002/05/03 06:49:30 agenkin Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-driver/ChangeLog,v 1.9 2002/05/08 05:53:41 jnelson Exp $
 
 *alsa-driver-0.9.0_rc1 (27 Apr 2002)
+
+  8 May 2002; Jon Nelson <jnelson@gentoo.org>
+	alsa-driver-0.9.0_rc1-r5.ebuild :
+        
+  Use check_KV and depend on portage >= 1.9.10
 
   3 May 2002; Arcady Genkin <agenkin@thpoon.com>
 	alsa-driver-0.9.0_rc1-r5.ebuild :
