--- a/media-video/mgavideo/ChangeLog
+++ b/media-video/mgavideo/ChangeLog
@@ -1,8 +1,12 @@
 # ChangeLog for media-video/mgavideo
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-video/mgavideo/ChangeLog,v 1.1 2002/02/01 21:53:31 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/mgavideo/ChangeLog,v 1.2 2002/05/08 06:01:08 jnelson Exp $
 
 *mgavideo-0.1.0.6 (1 Feb 2002)
+
+  8 May 2002; Jon Nelson <jnelson@gentoo.org> mgavideo-0.1.0.6.ebuild :
+  
+  Use check_KV and depend on portage >= 1.9.10
 
   1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
   
