--- a/net-fs/ftpfs/ChangeLog
+++ b/net-fs/ftpfs/ChangeLog
@@ -1,8 +1,12 @@
 # ChangeLog for net-fs/ftpfs
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-fs/ftpfs/ChangeLog,v 1.2 2002/04/10 21:49:38 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-fs/ftpfs/ChangeLog,v 1.3 2002/05/08 06:03:11 jnelson Exp $
 
 *ftpfs-0.6.2-r2 (10 Apr 2002)
+  8 May 2002; Jon Nelson <jnelson@gentoo.org>: ftpfs-0.6.2-r2.ebuild
+
+  use check_KV and add dependency for portage >= 1.9.10
+
   10 Apr 2002; Spider <spider@gentoo.org> 
   sed out depmod from "make install" to avoid sandbox errors.
 
