--- a/app-emulation/zsnes/ChangeLog
+++ b/app-emulation/zsnes/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-emulation/zsnes
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/zsnes/ChangeLog,v 1.2 2002/04/12 22:53:33 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/zsnes/ChangeLog,v 1.3 2002/05/08 08:48:20 spider Exp $
+
+
+*zsnes-1.337-r1 (7 May 2002)
+  7 May 2002; Spider <spider@gentoo.org> zsnes-1.337-r1.ebuild zsnes-1.337.ebuild :
+  fix sourceforge mirror stuff
 
 *zsnes-1.337-r1 (12 Apr 2002)
 
