--- a/sys-apps/evms/ChangeLog
+++ b/sys-apps/evms/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/evms
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/evms/ChangeLog,v 1.2 2002/04/30 17:31:06 woodchip Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/evms/ChangeLog,v 1.3 2002/05/08 17:53:10 woodchip Exp $
+
+*evms-1.0.1 (8 May 2002)
+
+  8 May 2002; Donny Davies <woodchip@gentoo.org> :
+
+  Updated to 1.0.1.
 
 *evms-1.0.0-r1 (30 Apr 2002)
 
