--- a/x11-wm/WindowMaker/ChangeLog
+++ b/x11-wm/WindowMaker/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-wm/WindowMaker
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/WindowMaker/ChangeLog,v 1.5 2002/04/18 01:41:23 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/WindowMaker/ChangeLog,v 1.6 2002/05/08 19:33:36 bass Exp $
+
+*WindowMaker-0.80.0-r3 (8 May 2002)
+  8 May 2002; José Alberto Suárez López <bass@gentoo.org> WindowMaker-0.80.0-r3.ebuild :
+  fix a error in the url of the WindowMaker-extra.
 
 *WindowMaker-0.80.0-r3 (18 Apr 2002)
   18 Apr 2002; Spider <spider@gentoo.org> WindowMaker-0.80.0-r3.ebuild:
