--- a/media-sound/xmms-shell/ChangeLog
+++ b/media-sound/xmms-shell/ChangeLog
@@ -1,7 +1,17 @@
 # ChangeLog for media-sound/xmms-shell
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-sound/xmms-shell/ChangeLog,v 1.1 2002/05/06 00:55:38 rphillips Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/xmms-shell/ChangeLog,v 1.2 2002/05/09 13:22:10 mkennedy Exp $
 
+*xmms-shell-0.99.0-r1 (9 May 2002)
+
+  9 May 2000; Matthew Kennedy <mkennedy@gentoo.org>
+  xmms-shell-0.99.0-r1.ebuild :ChangeLog,
+  files/digest-xmms-shell-0.99.0-r1, files/xmms-shell-gcc3.patch :
+
+  Conditional patch for a GCC3 profile. Patch shall be sent upstream.
+
+*xmms-shell-0.99.0 (5 May 2002)
+	
   5 May 2002; Ryan Phillips <rphillips@gentoo.org> xmms-shell-0.99.0.ebuild :
 
   Added initial ChangeLog which should be updated whenever the package is
