--- a/x11-wm/waimea/ChangeLog
+++ b/x11-wm/waimea/ChangeLog
@@ -1,7 +1,11 @@
 # ChangeLog for x11-wm/waimea
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/waimea/ChangeLog,v 1.1 2002/05/09 11:53:19 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/waimea/ChangeLog,v 1.2 2002/05/09 15:21:59 spider Exp $
 
+*waimea-0.3.0-r1 (9 May 2002)
+  9 May 2002; Spider <spider@gentoo.org> :
+  LICENSE, add an action link for /etc/skel, add einfo
+  
 *waimea-0.3.0 (08 May 2002)
   08 May 2002; Spider <spider@gentoo.org> waimea-0.3.0.ebuild ChangeLog :
   initial package release
