--- a/sys-apps/eject/ChangeLog
+++ b/sys-apps/eject/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for sys-apps/eject
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/eject/ChangeLog,v 1.1 2002/02/01 21:53:36 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/eject/ChangeLog,v 1.2 2002/05/09 15:26:14 daybird Exp $
+
+
+*eject-2.0.10 (9 May 2002)
+
+  9 May 2002; D.Chamberlain <daybird@gentoo.org> Changelog:
+  
+  Updated to 2.0.10.  This version is not sandbox friendly, so we only install the
+  binaries and docs.
 
 *eject-2.0.6 (1 Feb 2002)
 
