--- a/app-emulation/mol/ChangeLog
+++ b/app-emulation/mol/ChangeLog
@@ -1,5 +1,6 @@
 # ChangeLog for app-emulation/mol
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/mol/ChangeLog,v 1.2 2002/05/09 15:37:06 daybird Exp $
 
 *mol-0.9.63 (5 May 2002)
 
