--- a/sys-apps/devfsd/ChangeLog
+++ b/sys-apps/devfsd/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/devfsd
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/devfsd/ChangeLog,v 1.2 2002/02/19 16:24:29 azarah Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/devfsd/ChangeLog,v 1.3 2002/05/09 18:55:18 azarah Exp $
+
+*devfsd-1.3.25 (9 May 2002)
+
+  9 May 2002; Martin Schlemmer <azarah@gentoo.org> devfsd-1.3.25.ebuild :
+
+  Update to latest version.
 
 *devfsd-1.3.24 (19 Feb 2002)
 
