--- a/media-gfx/ee/ChangeLog
+++ b/media-gfx/ee/ChangeLog
@@ -1,7 +1,13 @@
 # ChangeLog for media-gfx/ee
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/ee/ChangeLog,v 1.1 2002/02/01 21:53:29 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/ee/ChangeLog,v 1.2 2002/05/09 20:54:32 spider Exp $
 
+
+*ee-0.3.12-r2 (9 May 2002)
+  9 May 2002; Spider <spider@gentoo.org> ee-0.3.12-r2.ebuild :
+  patch for -mo files
+  nls-update
+  
 *ee-0.3.12-r1 (1 Feb 2002)
 
   1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
