--- a/gnome-extra/gal/ChangeLog
+++ b/gnome-extra/gal/ChangeLog
@@ -1,6 +1,8 @@
 # ChangeLog for gnome-extra/gal
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gal/ChangeLog,v 1.1 2002/02/01 21:53:29 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gal/ChangeLog,v 1.2 2002/05/09 21:10:54 azarah Exp $
+
+*gal-0.19.1 (9 May 2002)
 
 *gal-0.19 (1 Feb 2002)
 
