--- a/x11-wm/WindowMaker/ChangeLog
+++ b/x11-wm/WindowMaker/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-wm/WindowMaker
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/WindowMaker/ChangeLog,v 1.6 2002/05/08 19:33:36 bass Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/WindowMaker/ChangeLog,v 1.7 2002/05/10 14:27:13 bass Exp $
+
+*WindowMaker-0.80.0-r3 (10 May 2002)
+  10 May 2002; José Alberto Suárez López <bass@gentoo.org> WindowMaker-0.80.0-r3.ebuild :
+  added a comment about the libxpm.
 
 *WindowMaker-0.80.0-r3 (8 May 2002)
   8 May 2002; José Alberto Suárez López <bass@gentoo.org> WindowMaker-0.80.0-r3.ebuild :
