--- a/net-im/jabber-server/ChangeLog
+++ b/net-im/jabber-server/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for net-im/jabber-server
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-im/jabber-server/ChangeLog,v 1.1 2002/02/01 21:53:32 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/jabber-server/ChangeLog,v 1.2 2002/05/11 08:13:42 verwilst Exp $
+
+*jabber-server-1.4.2-r1 (11 May 2002)
+
+  11 May 2002; B.Verwilst <verwilst@gentoo.org> ChangeLog :
+
+  Totally reworked ebuild, with the latest snapshots of the transports, 
+  this should work virtually out of the box now. Included ssl script as 
+  well.
 
 *jabber-server-1.4.1 (1 Feb 2002)
 
