--- a/x11-libs/qt/ChangeLog
+++ b/x11-libs/qt/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/qt
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt/ChangeLog,v 1.13 2002/05/07 17:03:50 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt/ChangeLog,v 1.14 2002/05/11 08:42:57 danarmak Exp $
+
+  11 May 2002; Dan Armak <danarmak@gentoo.org> changelog:
+  Fix bug #2483 (missing lcms dep)
 
 *qt-3.0.4-r1 (7 May 2002)
 
