--- a/kde-base/kdenetwork/ChangeLog
+++ b/kde-base/kdenetwork/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kdenetwork
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdenetwork/ChangeLog,v 1.3 2002/04/04 20:09:23 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdenetwork/ChangeLog,v 1.4 2002/05/11 15:55:29 danarmak Exp $
+
+*kdenetwork-3.0-r1 (11 May 2002)
+
+  11 May 2002; Dan Armak <danarmak@gentoo.org> Changelog :
+  
+  Added initscripts for lisa and reslisa, close bug #1230.
 
 *kdenetwork-3.0 (4 Apr 2002)
 
