--- a/sys-apps/mkisofs/ChangeLog
+++ b/sys-apps/mkisofs/ChangeLog
@@ -1,13 +1,10 @@
 # ChangeLog for sys-apps/mkisofs
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/mkisofs/ChangeLog,v 1.1 2002/02/01 21:53:37 gbevin Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/mkisofs/ChangeLog,v 1.2 2002/05/11 18:19:24 agenkin Exp $
 
 *mkisofs-1.13-r2 (1 Feb 2002)
 
-  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
+  11 May 2002; Arcady Genkin <agenkin@thpoon.com> mkisofs-1.13-r2.ebuild :
   
-  Added initial ChangeLog which should be updated whenever the package is
-  updated in any way. This changelog is targetted to users. This means that the
-  comments should well explained and written in clean English. The details about
-  writing correct changelogs are explained in the skel.ChangeLog file which you
-  can find in the root directory of the portage repository.
+  Added explicit src_compile function.  No user-visible changes.  This
+  closes bug 2488.
